initiate module (placeholder) narrative-manager

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -59,6 +59,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']"><i class="icon-speedometer"></i> Dashboard <span class="tag tag-info">NEW</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i> Narratives Manager</a>
+            </li>
             <li class="nav-item nav-dropdown">
                 <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-star"></i> Pages</a>
                 <ul class="nav-dropdown-items">
