initiate module (placeholder) clinician-dashboard

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -57,7 +57,7 @@
     <nav class="sidebar-nav">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']"><i class="icon-speedometer"></i> Dashboard <span class="tag tag-info">NEW</span></a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-dashboard']"><i class="icon-speedometer"></i>Clinician Dashboard</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i> Narratives Manager</a>
