--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -60,6 +60,9 @@
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-dashboard']"><i class="icon-speedometer"></i>Clinician Dashboard</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Resource Browser</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i> Narratives Manager</a>
             </li>
             <li class="nav-item nav-dropdown">
