--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -63,7 +63,10 @@
                 <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Resource Browser</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i> Narratives Manager</a>
+                <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i>Narratives Manager</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/risk-manager']"><i class="icon-bell"></i>Risk Manager</a>
             </li>
             <li class="nav-item nav-dropdown">
                 <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-star"></i> Pages</a>
