initial Clinician Manager

--- a/src/app/modules/clinician-dashboard/clinician-dashboard.component.html
+++ b/src/app/modules/clinician-dashboard/clinician-dashboard.component.html
@@ -1,3 +1,35 @@
 <div class="animated fadeIn">
-    Placeholder for clinician dashboard component
+    <div >
+
+        <h3 class="w3-tag">Clinician Manager - Patient Data Overview</h3>
+
+        <patient-overview>
+        </patient-overview>
+
+        <patient-clinicians-history>
+        </patient-clinicians-history>
+
+        <patient-diseases>
+        </patient-diseases>
+
+        <patient-imaging>
+
+        </patient-imaging>
+
+        <patient-checks>
+        </patient-checks>
+
+        <patient-daily-average-observations>
+        </patient-daily-average-observations>
+
+        <medication-history>
+        </medication-history>
+
+        <patient-morisky-results>
+        </patient-morisky-results>
+
+
+
+
+    </div>
 </div>
