--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -57,7 +57,7 @@
     <nav class="sidebar-nav">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-dashboard']"><i class="icon-speedometer"></i>Clinician Dashboard</a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-dashboard']"><i class="icon-speedometer"></i>Clinician Manager</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Resource Browser</a>
