--- a/src/app/modules/data-resource-browser/data-resource-browser.component.html
+++ b/src/app/modules/data-resource-browser/data-resource-browser.component.html
@@ -1,3 +1,7 @@
 <div class="animated fadeIn">
-    Placeholder for data-resource-browser component
+
+        <resource-browser-tag>
+
+        </resource-browser-tag>
+
 </div>
