CM self monitoring result scores reformatted

--- a/src/app/modules/clinician-dashboard/clinician-dashboard.component.html
+++ b/src/app/modules/clinician-dashboard/clinician-dashboard.component.html
@@ -1,35 +1,65 @@
 <div class="animated fadeIn">
-    <div >
-
-        <h3 class="w3-tag">Clinician Manager - Patient Data Overview</h3>
-
-        <patient-overview>
-        </patient-overview>
-
-        <patient-clinicians-history>
-        </patient-clinicians-history>
-
-        <patient-diseases>
-        </patient-diseases>
-
-        <patient-imaging>
-
-        </patient-imaging>
-
-        <patient-checks>
-        </patient-checks>
-
-        <patient-daily-average-observations>
-        </patient-daily-average-observations>
-
-        <medication-history>
-        </medication-history>
-
-        <patient-morisky-results>
-        </patient-morisky-results>
+    <h3 class="w3-tag">Clinician Manager - Patient Data Overview</h3>
+    <div>
 
 
+        <div class="row">
 
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
+                <patient-overview>
+                </patient-overview>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
+
+                <patient-diseases>
+                </patient-diseases>
+
+
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
+
+                <patient-imaging>
+
+                </patient-imaging>
+
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-8">
+
+                <patient-clinicians-history>
+                </patient-clinicians-history>
+
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+                <patient-checks>
+                </patient-checks>
+
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+                <medication-history>
+                </medication-history>
+
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+                <patient-daily-average-observations>
+                </patient-daily-average-observations>
+
+            </div>
+
+
+            <patient-morisky-results>
+            </patient-morisky-results>
+
+
+        </div>
 
     </div>
 </div>
