Graph implementation updated with right Y axis, activity bar values added

--- a/src/app/modules/clinician-dashboard/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-dashboard/cards/patient-daily-average-observations.component.html
@@ -16,7 +16,10 @@
             </div>
 
             <div class="w3-tiny w3-right w3-full">Hover mouse over the diagram for values. Click
-                series names above the diagram to view/hide series. Select range in the bottom overview graph to view only part of the time series in the main graph.
+                series name in the legend above the diagram to view/hide series. Double click a chosen series legend to view only this series.
+                If several series are shown on one axis, series are not normalised.
+                Compare values of very different ranges on separate y axes.
+
             </div>
         </div>
     </div>
