--- a/src/app/modules/data-resource-browser/cards/data-resource-browser-card.component.html
+++ b/src/app/modules/data-resource-browser/cards/data-resource-browser-card.component.html
@@ -19,7 +19,10 @@
             </div>
             <button type="button"
                     class="btn btn-default"
-                    (click)="addNode()">Display all categories</button>
+                    (click)="displayAll()">Display all sub-categories</button>
+            <button type="button"
+                    class="btn btn-default"
+                    (click)="collapseAll()">Reset to default</button>
             <p>
 
 
