--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -14,7 +14,7 @@
 
             </div>
             <div class="w3-tiny w3-right">Click inside the diagram area to enable mouse interactions (zoom,
-                scroll left/right, click for detail). Click on any medication to see more details in a pop up window.
+                scroll left/right, click for detail)
             </div>
 
             <button type="button"
