date picker added

--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -1,5 +1,7 @@
 <div class="animated fadeIn">
     <h3 class="w3-tag">Clinician Manager - Patient Data Overview</h3>
+
+    <ng-daterangepicker [(ngModel)]="value" [options]="options"></ng-daterangepicker>
     <div>
 
 
