--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -12,8 +12,7 @@
             <div class="row">
 
 
-
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -23,7 +22,7 @@
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="Name"> Name</div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -35,9 +34,7 @@
                 </div>
 
 
-
-
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -49,7 +46,7 @@
                 </div>
 
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -60,7 +57,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -71,7 +68,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -82,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -93,7 +90,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -104,7 +101,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -115,7 +112,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
@@ -126,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
                         <div class="card-block p-0 clearfix">
 
