--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -5,9 +5,9 @@
 
         </div>
     </div>
-    <div class="card-block" style="overflow-x: auto">
+    <div class="card-block">
 
-        <table class="table table-striped">
+        <table class="table table-responsive">
             <thead>
             <tr>
                 <th i18n="Name">Name</th>
