--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -7,7 +7,43 @@
         </div>
     </div>
     <div class="card-block">
+        <div class="row">
 
+            <table class="table table-striped table-bordered table-sm">
+                <thead>
+                <tr>
+                    <th i18n="Value">Observation</th>
+                    <th i18n="Value">Unit</th>
+                    <th i18n="Toggle">Left</th>
+                    <th i18n="Toggle">Right</th>
+
+
+                </tr>
+                </thead>
+                <tbody>
+
+                <tr *ngFor="let group of observationGroups">
+
+                    <td>{{group.name}}</td>
+                    <td>{{group.label}}</td>
+                    <td>
+
+                        <input type="checkbox" [checked]="group.showLeft"
+                               (change)="toggleLeft(group.id, group.name)"/>
+                    </td>
+                    <td>
+
+                        <input type="checkbox" [checked]="group.showRight"
+                               (change)="toggleRight(group.id, group.name)"/>
+
+                    </td>
+
+
+                </tr>
+
+                </tbody>
+            </table>
+        </div>
 
         <div class="row">
 
@@ -16,7 +52,8 @@
             </div>
 
             <div class="w3-tiny w3-right w3-full">Hover mouse over the diagram for values. Click
-                series name in the legend above the diagram to view/hide series. Double click a chosen series legend to view only this series.
+                series name in the legend above the diagram to view/hide series. Double click a chosen series legend to
+                view only this series.
                 If several series are shown on one axis, series are not normalised.
                 Compare values of very different ranges on separate y axes.
 
