Help texts updated

--- a/src/app/modules/clinician-manager/cards/patient-check-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-check-history.component.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="w3-tiny w3-right">Click inside the diagram area to enable mouse interactions (zoom,
-                scroll left/right, click for detail)
+                scroll left/right, click for detail). Click chosen event to view it's detail in a pop up window.
             </div>
 
             <button type="button"
