--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -77,14 +77,17 @@
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/patient-id']"><i class="icon-info"></i>Select Patient</a>
             </li>
             -->
+
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Patient
+                    overview (Data Resource Browser - DRB)</a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/clinician-manager']"><i class="icon-speedometer"></i>Patient data
-                    viewer</a>
+                    (Clinician Manager - CM)</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Care
-                    setting</a>
-            </li>
+
             <li class="nav-item nav-dropdown">
                 <a class="nav-link nav-dropdown-toggle" [routerLink]="['/narratives-manager']"><i
                         class="icon-briefcase"></i>Care plan manager</a>
