Button names updated

--- a/src/app/modules/clinician-manager/cards/patient-check-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-check-history.component.html
@@ -20,8 +20,8 @@
 
             <button type="button"
                     class="btn btn-default"
-                    (click)="focusVisChecks()" i18n="Focus all">
-                Focus all
+                    (click)="focusVisChecks()" i18n="Zoom to view all checks">
+                Zoom to view all checks
             </button>
 
         </div>
