--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -20,8 +20,8 @@
 
             <button type="button"
                     class="btn btn-default"
-                    (click)="focusVis()" i18n="Focus all">
-                Focus all
+                    (click)="focusVis()" i18n="Zoom to view all medications">
+                Zoom to view all medications
             </button>
 
 
