Routing changed for E2E acceptance tests

--- a/src/app/authentication/login.component.html
+++ b/src/app/authentication/login.component.html
@@ -8,7 +8,8 @@
                             <h1>Login</h1>
                             <form role="form" (submit)="login($event, username.value, password.value)">
 
-                                <p class="text-muted">Sign In to your account</p>
+                                <p class="text-muted">Sign In to your account (USE NONE OR ANY USERNAME AND PASSWORD FOR
+                                    TESTING)</p>
                                 <div class="input-group mb-1">
                                 <span class="input-group-addon"><i class="icon-user"></i>
                                 </span>
