--- a/src/app/modules/clinician-manager/cards/patient-check-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-check-history.component.html
@@ -31,7 +31,7 @@
 <modal [animation]="animationsEnabled" #myCheckModal>
     <div *ngIf="selectedCheck">
         <modal-header [show-close]="true">
-            <h4 class="modal-title">Patient medication details</h4>
+            <h4 class="modal-title">Patient check details</h4>
         </modal-header>
         <modal-body>
 
