Buttons to hide all comparison values in the observation graph

--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -41,6 +41,31 @@
 
                 </tr>
 
+                <tr>
+
+                    <td>
+                        <button class="btn btn-default" type="button" (click)="resetLeft(); resetRight();"
+                                i18n="Hide All">Hide All
+                        </button>
+                    </td>
+                    <td></td>
+                    <td>
+
+                        <button class="btn btn-default" type="button" (click)="resetLeft()"
+                                i18n="Hide Left">Hide Left
+                        </button>
+                    </td>
+                    <td>
+
+                        <button class="btn btn-default" type="button" (click)="resetRight()" i18n="Hide Right"
+                        >Hide Right
+                        </button>
+
+                    </td>
+
+
+                </tr>
+
                 </tbody>
             </table>
         </div>
