--- a/src/app/authentication/login.component.html
+++ b/src/app/authentication/login.component.html
@@ -5,19 +5,20 @@
                 <div class="card-group">
                     <div class="card p-2">
                         <div class="card-block">
-                            <h1>Login</h1>
-                            <form role="form" (submit)="login($event, username.value, password.value)">
-
+                            <div *ngIf="error?.status ===401" class="alert-danger">
+                                {{error.statusText}}
+                            </div>
+                            <form [formGroup]="loginForm" (ngSubmit)="doLogin($event)">                                <h1>Login</h1>
                                 <p class="text-muted">Sign In to your account</p>
                                 <div class="input-group mb-1">
-                                <span class="input-group-addon"><i class="icon-user"></i>
-                                </span>
-                                    <input #username type="text" class="form-control" placeholder="Username">
+                                    <span class="input-group-addon"><i class="icon-user"></i>
+                                    </span>
+                                    <input formControlName="username" type="text" class="form-control" placeholder="Username">
                                 </div>
                                 <div class="input-group mb-2">
-                                <span class="input-group-addon"><i class="icon-lock"></i>
-                                </span>
-                                    <input #password type="password" class="form-control" placeholder="Password">
+                                    <span class="input-group-addon"><i class="icon-lock"></i>
+                                    </span>
+                                    <input type="password" formControlName="password" class="form-control" placeholder="Password">
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-6">
