--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -53,12 +53,10 @@
             </li>
             -->
             <li class="nav-item">
-                <a class="nav-link" href="#" [routerLink]="['/patient-id']"><i class="fa fa-user-plus"></i> Patient:
-                    {{cdSharedObject.patient.display}} </a>
+                <a class="nav-link" href="#" [routerLink]="['/patient-id']"><i class="fa fa-user-plus"></i>  Patient: {{cdSharedObject.patient.display}}  </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" [routerLink]="['/user-manage']"><i class="fa fa-user"></i> Clinician:
-                    {{cdSharedObject.clinician.display}} </a>
+                <a class="nav-link" href="#" [routerLink]="['/user-manage']"><i class="fa fa-user"></i>  Clinician: {{cdSharedObject.clinician.display}}   </a>
             </li>
             <!--
             <li class="nav-item">
@@ -77,20 +75,14 @@
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/patient-id']"><i class="icon-info"></i>Select Patient</a>
             </li>
             -->
-
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Patient
-                    overview (Data Resource Browser - DRB)</a>
+                <a class="nav-link" [routerLink]="['/clinician-manager']"><i class="icon-speedometer"></i>Patient data viewer</a>
             </li>
-
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/clinician-manager']"><i class="icon-speedometer"></i>Patient data
-                    (Clinician Manager - CM)</a>
+                <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Care setting</a>
             </li>
-
             <li class="nav-item nav-dropdown">
-                <a class="nav-link nav-dropdown-toggle" [routerLink]="['/narratives-manager']"><i
-                        class="icon-briefcase"></i>Care plan manager</a>
+                <a class="nav-link nav-dropdown-toggle" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i>Care plan manager</a>
                 <!--
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
