--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.html
@@ -8,7 +8,7 @@
     <div class="card-block" style="overflow-x: auto">
 
 
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered table-sm">
             <thead>
             <tr>
                 <th i18n="Name">Name</th>
@@ -23,14 +23,14 @@
             <tbody>
 
 
-                <tr *ngFor="let disease of diseases">
-                    <td>{{disease.name}}</td>
-                    <td>{{disease.dateOfOnset}}</td>
-                    <td>{{disease.severity}}</td>
-                    <td>{{disease.sideOfOnset}}</td>
-                    <td>{{disease.clinicalPhenotype}}</td>
+            <tr *ngFor="let disease of diseases">
+                <td>{{disease.name}}</td>
+                <td>{{disease.dateOfOnset}}</td>
+                <td>{{disease.severity}}</td>
+                <td>{{disease.sideOfOnset}}</td>
+                <td>{{disease.clinicalPhenotype}}</td>
 
-                </tr>
+            </tr>
 
             </tbody>
         </table>
