--- a/src/app/modules/clinician-manager/cards/patient-imaging.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-imaging.component.html
@@ -5,13 +5,54 @@
 
         </div>
     </div>
-    <div class="card-block" style="overflow-x: auto">
+    <div class="card-block" style="overflow-x: auto;">
 
 
-        <table class="table table-striped">
+        <div class="row">
+            <h2 class="col-xs-6">Simple data table</h2>
+            <div class="col-xs-2">
+                <label class="label-control">Rows on page</label>
+                <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
+                    <option [ngValue]="5">5</option>
+                    <option [ngValue]="10">10</option>
+                    <option [ngValue]="15">15</option>
+                </select>
+            </div>
+            <div class="col-xs-4">
+                <div class="row">
+                    <label class="col-xs-12 label-control">Sort by</label>
+                </div>
+                <div class="col-xs-6">
+                    <div class="row">
+                        <select class="form-control input-sm" [(ngModel)]="sortBy">
+                            <option ngValue="type">type</option>
+
+                        </select>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="row">
+                        <select class="form-control input-sm" [(ngModel)]="sortOrder">
+                            <option ngValue="asc">Ascending</option>
+                            <option ngValue="desc">Descending</option>
+                            <option ngValue="badValue">Bad value</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <table class="table table-striped" [mfData]="imaging" #mf="mfDataTable"
+               [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+
             <thead>
             <tr>
-                <th i18n="Type of Exam">Name</th>
+                <th i18n="Type of Exam">
+                    <mfDefaultSorter by="type">
+                        Name
+                    </mfDefaultSorter>
+                </th>
                 <th i18n="exist">Exist</th>
                 <th i18n="List of Dates">List of Dates</th>
                 <th i18n="Report">Report</th>
@@ -23,16 +64,25 @@
             <tbody>
 
 
-                <tr *ngFor="let image of imaging">
-                    <td>{{image.type}}</td>
-                    <td>{{image.exist}}</td>
-                    <td>{{image.dates}}</td>
-                    <td>{{image.report}}</td>
-                    <td>{{image.url}}</td>
+            <tr *ngFor="let item of mf.data">
+                <td>{{item.type}}</td>
+                <td>{{item.exist}}</td>
+                <td>{{item.dates}}</td>
+                <td>{{item.report}}</td>
+                <td>{{item.url}}</td>
 
-                </tr>
+            </tr>
 
             </tbody>
+
+            <tfoot>
+            <tr>
+                <td colspan="5">
+                    <mfBootstrapPaginator></mfBootstrapPaginator>
+                </td>
+            </tr>
+            </tfoot>
+
         </table>
 
     </div>
