--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -1,32 +1,45 @@
 
 
 
+
 <div class="card" *ngIf="patientData">
     <div class="card-header w3-orange">
+
+
         <div i18n="PatientData Info"><i class="fa fa-user"></i>
         PatientData Info - {{patientData.name}}</div>
+
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar"
+                 aria-hidden="true" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+            </div>
+        </div>
     </div>
     <div class="card-block">
 
+
         <div class="animated fadeIn">
+
+
             <div class="row">
 
 
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 m1">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.name}}</div>
+                            <div class=" text-primary  mb-0 pt-1">{{patientData.name}}</div>
 
                         </div>
-                        <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="Name"> Name</div>
+                        <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="Name">Name</div>
                     </div>
                 </div>
+
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.id}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.id}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="Id">ID</div>
@@ -36,9 +49,9 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.bloodType}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.bloodType}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="bloodType">blood type</div>
@@ -48,9 +61,9 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.dob}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.dob}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="DOB">Date Of Birth</div>
@@ -59,9 +72,9 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.height}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.height}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="height">height</div>
@@ -70,9 +83,9 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.gender}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.gender}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="gender">gender</div>
@@ -81,9 +94,9 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.insurer}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.insurer}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="insurer">insurer</div>
@@ -92,9 +105,9 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.insurerId}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.insurerId}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="insurer ID">insurer ID</div>
@@ -103,9 +116,10 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.occupancy}}</div>
+
+                            <div class=" text-primary mb-0 pt-1">{{patientData.occupancy}}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="occupancy">occupancy</div>
@@ -114,9 +128,10 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.livesAlone==="true"? "Yes":"No" }}</div>
+
+                            <div class=" text-primary mb-0 pt-1">{{patientData.livesAlone==="true"? "Yes":"No" }}</div>
 
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="lives alone">lives alone</div>
@@ -125,12 +140,12 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="card">
-                        <div class="card-block p-0 clearfix">
+                        <div class="card-block p-1 ">
 
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.address1}}</div>
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.address2}}</div>
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.address3}}</div>
-                            <div class="h5 text-primary mb-0 pt-1">{{patientData.address4}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.address1}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.address2}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.address3}}</div>
+                            <div class=" text-primary mb-0 pt-1">{{patientData.address4}}</div>
                         </div>
                         <div class="text-muted text-uppercase font-weight-bold font-xs" i18n="Address"> Patient Address</div>
                     </div>
@@ -138,4 +153,5 @@
             </div>
         </div>
     </div>
+
 </div>
