--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,73 +1,74 @@
 <div class="card">
-    <div class="card-header w3-green">
+    <div class="card-header">
 
         <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i> Average daily observations</div>
         <div class="card-actions">
 
         </div>
     </div>
-    <div class="card-block">
+    <div class="card-block" style="overflow-x: auto;">
         <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <table class="table table-striped table-bordered table-sm">
+                    <thead>
+                    <tr>
+                        <th i18n="Value">Observation</th>
 
-            <table class="table table-striped table-bordered table-sm">
-                <thead>
-                <tr>
-                    <th i18n="Value">Observation</th>
-                    <th i18n="Value">Unit</th>
-                    <th i18n="Toggle">Left</th>
-                    <th i18n="Toggle">Right</th>
+                        <th i18n="Toggle">Left</th>
+                        <th i18n="Toggle">Right</th>
+                        <th i18n="Value">Unit</th>
 
+                    </tr>
+                    </thead>
+                    <tbody>
 
-                </tr>
-                </thead>
-                <tbody>
+                    <tr *ngFor="let group of observationGroups">
 
-                <tr *ngFor="let group of observationGroups">
+                        <td>{{group.name}}</td>
 
-                    <td>{{group.name}}</td>
-                    <td>{{group.label}}</td>
-                    <td>
+                        <td>
 
-                        <input type="checkbox" [checked]="group.showLeft"
-                               (change)="toggleLeft(group.id, group.name)"/>
-                    </td>
-                    <td>
+                            <input type="checkbox" [checked]="group.showLeft"
+                                   (change)="toggleLeft(group.id, group.name)"/>
+                        </td>
+                        <td>
 
-                        <input type="checkbox" [checked]="group.showRight"
-                               (change)="toggleRight(group.id, group.name)"/>
+                            <input type="checkbox" [checked]="group.showRight"
+                                   (change)="toggleRight(group.id, group.name)"/>
 
-                    </td>
-
-
-                </tr>
-
-                <tr>
-
-                    <td>
-                        <button class="btn btn-default" type="button" (click)="resetLeft(); resetRight();"
-                                i18n="Hide All">Hide All
-                        </button>
-                    </td>
-                    <td></td>
-                    <td>
-
-                        <button class="btn btn-default" type="button" (click)="resetLeft()"
-                                i18n="Hide Left">Hide Left
-                        </button>
-                    </td>
-                    <td>
-
-                        <button class="btn btn-default" type="button" (click)="resetRight()" i18n="Hide Right"
-                        >Hide Right
-                        </button>
-
-                    </td>
+                        </td>
+                        <td>{{group.label}}</td>
 
 
-                </tr>
+                    </tr>
 
-                </tbody>
-            </table>
+                    <tr>
+
+                        <td>
+                            All
+
+                        </td>
+
+                        <td>
+                            <input type="checkbox" [checked]="showAllLeft"
+                                   (change)="resetLeft()"/>
+
+
+                        </td>
+                        <td>
+                            <input type="checkbox" [checked]="showAllRight"
+                                   (change)="resetRight()"/>
+
+
+                        </td>
+                        <td></td>
+
+
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <div class="row">
@@ -76,13 +77,17 @@
                 <nvd3 [options]="options" [data]="data"></nvd3>
             </div>
 
-            <div class="w3-tiny w3-right w3-full">Hover mouse over the diagram for values. Click
-                series name in the legend above the diagram to view/hide series. Double click a chosen series legend to
-                view only this series.
-                If several series are shown on one axis, series are not normalised.
-                Compare values of very different ranges on separate y axes.
 
-            </div>
+        </div>
+    </div>
+
+    <div class="card-footer">
+        <div class="w3-tiny w3-right w3-full">Hover mouse over the diagram for values. Click
+            series name in the legend above the diagram to view/hide series. Double click a chosen series legend to
+            view only this series.
+            If several series are shown on one axis, series are not normalised.
+            Compare values of very different ranges on separate y axes.
+
         </div>
     </div>
 </div>
