--- a/src/app/modules/clinician-manager/cards/patient-check-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-check-history.component.html
@@ -14,9 +14,7 @@
 
             </div>
 
-            <div class="w3-tiny w3-right">Click inside the diagram area to enable mouse interactions (zoom,
-                scroll left/right, click for detail). Click chosen event to view it's detail in a pop up window.
-            </div>
+
 
             <button type="button"
                     class="btn btn-default"
@@ -24,6 +22,12 @@
                 Zoom to view all checks
             </button>
 
+        </div>
+    </div>
+
+    <div class="card-footer">
+        <div class="w3-tiny w3-right">Click inside the diagram area to enable mouse interactions (zoom,
+            scroll left/right, click for detail). Click chosen event to view it's detail in a pop up window.
         </div>
     </div>
 </div>
