--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -5,9 +5,9 @@
 
         </div>
     </div>
-    <div class="card-block">
+    <div class="card-block" style="overflow-x: auto;">
 
-        <table class="table table-responsive">
+        <table class="table table-striped table-bordered table-sm">
             <thead>
             <tr>
                 <th i18n="Name">Name</th>
@@ -35,4 +35,6 @@
 
 
     </div>
+
+
 </div>
