--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -47,6 +47,12 @@
                 </patient-overview>
             </div>
 
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+                <patient-notifications>
+                </patient-notifications>
+            </div>
+
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
 
                 <patient-diseases>
