--- a/src/app/modules/clinician-manager/cards/patient-check-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-check-history.component.html
@@ -3,6 +3,8 @@
         <div i18n="Patient Visits History"><i class="fa fa-hospital-o"></i> Patient Visits History</div>
         <div class="card-actions">
 
+            <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
+            <div class="w3-text-gray">loaded: {{progress.total}} bytes</div>
         </div>
     </div>
     <div class="card-block">
