--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -3,6 +3,8 @@
         <div i18n="Patient Clinicians History">Patient Clinicians History</div>
         <div class="card-actions">
 
+            <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
+            <div class="w3-text-gray">loaded: {{progress.total}} bytes</div>
         </div>
     </div>
     <div class="card-block" style="overflow-x: auto;">
