--- a/src/app/modules/clinician-manager/cards/patient-notifications.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-notifications.component.html
@@ -1,13 +1,18 @@
 <div class="card">
-    <div class="card-header w3-amber">
-        <div i18n="Patient Imaging Data">Patient Imaging Data</div>
+    <div class="card-header w3-light-blue">
+        <div i18n="Notifications of Changes in Treatment">Notifications of Changes in Treatment</div>
+
         <div class="card-actions">
 
             <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
             <div class="w3-text-gray">loaded: {{progress.total}} bytes</div>
         </div>
+
+
     </div>
-    <div class="card-block" style="overflow-x: auto;">
+
+
+    <div class="card-block" style="overflow-x: auto">
 
 
         <div class="row">
@@ -27,7 +32,8 @@
                 <div class="col-xs-6">
                     <div class="row">
                         <select class="form-control input-sm" [(ngModel)]="sortBy">
-                            <option ngValue="type">Type</option>
+                            <option ngValue="name">Name</option>
+                            <option ngValue="date">Date</option>
 
                         </select>
                     </div>
@@ -44,21 +50,20 @@
             </div>
         </div>
 
-
-        <table class="table table-striped" [mfData]="imaging" #mf="mfDataTable"
+        <table class="table table-striped table-sm" [mfData]="notifications" #mf="mfDataTable"
                [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
-
             <thead>
             <tr>
-                <th i18n="Type of Exam">
-                    <mfDefaultSorter by="type">
-                        Type
+                <th i18n="Name">
+                    <mfDefaultSorter by="name">
+                        Change
                     </mfDefaultSorter>
                 </th>
-                <th i18n="exist">Exist</th>
-                <th i18n="List of Dates">List of Dates</th>
-                <th i18n="Report">Report</th>
-                <th i18n="URL to Images">URL to Images</th>
+                <th i18n="Date of Onset">
+                    <mfDefaultSorter by="date">
+                        Date
+                    </mfDefaultSorter>
+                </th>
 
 
             </tr>
@@ -66,12 +71,10 @@
             <tbody>
 
 
-            <tr *ngFor="let item of mf.data">
-                <td>{{item.type}}</td>
-                <td>{{item.exist}}</td>
-                <td>{{item.dates}}</td>
-                <td>{{item.report}}</td>
-                <td>{{item.url}}</td>
+            <tr *ngFor="let disease of mf.data">
+                <td>{{disease.name}}</td>
+                <td>{{disease.date}}</td>
+
 
             </tr>
 
@@ -84,7 +87,6 @@
                 </td>
             </tr>
             </tfoot>
-
         </table>
 
     </div>
