--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -1,7 +1,6 @@
 
 
 
-
 <div class="card" *ngIf="patientData">
     <div class="card-header w3-orange">
 
@@ -9,11 +8,13 @@
         <div i18n="PatientData Info"><i class="fa fa-user"></i>
         PatientData Info - {{patientData.name}}</div>
 
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped active" role="progressbar"
-                 aria-hidden="true" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-            </div>
+
+        <div class="card-actions">
+
+            <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
+            <div class="w3-text-gray">loaded: {{progress.total}} bytes</div>
         </div>
+
     </div>
     <div class="card-block">
 
