patient id improve

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -82,7 +82,7 @@
                 <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Care setting</a>
             </li>
             <li class="nav-item nav-dropdown">
-                <a class="nav-link nav-dropdown-toggle" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i>Care plan manager</a>
+                <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i>Care plan manager</a>
                 <!--
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
@@ -96,6 +96,9 @@
                     </li>
                 </ul>
                 -->
+            </li>
+            <li class="nav-item nav-dropdown">
+                <a class="nav-link" [routerLink]="['/patient-id']"><i class="fa fa-search" aria-hidden="true"></i>Select Patient</a>
             </li>
             <!--
                         <li class="nav-item">
