--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.html
@@ -1,10 +1,10 @@
 <div class="card">
-    <div class="card-header w3-light-blue">
-        <div i18n="Patient Diseases">Patient Diseases</div>
-        <div class="card-actions">
+    <div class="card-header w3-orange  w3-center">
+        <div i18n="Patient Diseases"><i class="fa fa-medkit"></i> Patient Diseases</div>
+        <div class="w3-right">
 
             <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
-            <div class="w3-text-gray">loaded: {{progress.total}} bytes</div>
+            <div *ngIf="(progress.percentage < 100)"> loaded: {{progress.total}} bytes</div>
         </div>
     </div>
     <div class="card-block" style="overflow-x: auto">
