--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -1,18 +1,15 @@
-
-
-
 <div class="card" *ngIf="patientData">
-    <div class="card-header w3-orange">
+    <div class="card-header w3-orange  w3-center">
 
 
         <div i18n="PatientData Info"><i class="fa fa-user"></i>
         PatientData Info - {{patientData.name}}</div>
 
 
-        <div class="card-actions">
+        <div class="w3-right">
 
             <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
-            <div class="w3-text-gray">loaded: {{progress.total}} bytes</div>
+            <div *ngIf="(progress.percentage < 100)"> loaded: {{progress.total}} bytes</div>
         </div>
 
     </div>
