values toggling updated

--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -16,7 +16,15 @@
                 <table class="table-striped table-bordered table-sm" style="margin: 0 auto; float: none;">
                     <thead>
                     <tr>
-                        <th i18n="Observation">Observation</th>
+                        <th rowspan="2" i18n="Observation">Observation</th>
+
+                        <th colspan="2" i18n="Axis">Axis</th>
+
+
+                    </tr>
+
+                    <tr>
+
 
                         <th i18n="Left">Left</th>
                         <th i18n="Right">Right</th>
@@ -28,7 +36,7 @@
                     <tr>
 
                         <td>
-                            All
+                            All observations
 
                         </td>
 
