--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -19,7 +19,7 @@
         <div class="animated fadeIn">
 
             <div class="row">
-                <div class=" col-xl-6 col-lg-12">
+              <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
 
                     <div class=" text-primary  ">{{patientData.name}}</div>
                     <div class="text-muted text-uppercase w3-border-top font-weight-bold font-xs " i18n="Name">Name
@@ -53,7 +53,7 @@
 
                 </div>
                 <br>
-                <div class=" col-xl-6 col-lg-12">
+              <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
 
 
                     <div class=" text-primary ">{{patientData.insurer}}</div>
